# FS-AI

./: README.md  Yolov5.ipynb
Control/: Pure pursuit control lateral.c
Otros/Instalación ROS/: README.md
Planificación/: README.md  Test Case Planificación.ipynb  Triangulacion de Delaunay.ipynb
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/fastslam/lib/fastslam/: fastslam
install/fastslam/share/fastslam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/0_fsb_common/fsb_common_msg/: package.xml
src/1_perception/camara_cone_detection/: setup.cfg  setup.py
src/1_perception/camara_cone_detection/camara_cone_detection/: camara_cone_detection.py
src/1_perception/camara_cone_detection/install/: local_setup.sh  setup.ps1  setup.sh
src/1_perception/camara_cone_detection/install/camara_cone_detection/share/camara_cone_detection/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
src/1_perception/camara_cone_detection/log/: latest_build
src/2_estimation/position_estimator/: README.md
src/3_slam/fastSlam/: algorithm.py
src/3_slam/src/fastslam/: setup.py
src/3_slam/src/fastslam/fastslam/: draw.py
src/4_planification/src/: README.md
src/4_planification/src/delaunay_triangulation_midpoints/: package.xml  setup.cfg  setup.py
src/4_planification/src/delaunay_triangulation_midpoints/delaunay_triangulation_midpoints/: delaunay_middle_path.py  delaunay_triangulation.py  simple_middle_path.py  track_middle_path.py
src/slam/3_slam/: README.md
src/slam/3_slam/src/fastSlam/: input.py
